# chime

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/initiatives/timezone-config/issues/: 08-fuzzy-suggest-iana-names.md
scripts/: release.py
src/chime/: __init__.py  __main__.py  alerts.py  cli.py  config.py  parsers.py  run.py  state.py  term.py  tz.py  watch.py
tests/: test_alerts.py  test_cli.py  test_config.py  test_parsers.py  test_run.py  test_state.py  test_tz.py  test_watch.py
