[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "chime-cli"
dynamic = ["version"]
description = "Friendly terminal alarms, timers & pomodoro for macOS and Linux"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Sarthak Mahapatra", email = "sarthakmahapatra.dev@gmail.com" }]
keywords = ["alarm", "timer", "pomodoro", "cli", "stopwatch", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
chime = "chime.cli:main"

[project.urls]
Homepage = "https://github.com/MaVericKWareZ/chime"
Source = "https://github.com/MaVericKWareZ/chime"
Issues = "https://github.com/MaVericKWareZ/chime/issues"
Changelog = "https://github.com/MaVericKWareZ/chime/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "build>=1.2",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+source"

[tool.hatch.build.hooks.vcs]
version-file = "src/chime/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/chime",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chime"]

# ---------- ruff ----------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "PL",  # pylint subset
    "RUF", # ruff-specific
]
ignore = [
    "E501",    # line too long — formatter handles this
    "PLR2004", # magic value comparison — fine in CLI parsing
    "PLR0912", # too many branches — argparse handlers
    "PLR0915", # too many statements — same
    "PLR0913", # too many arguments — fine for trigger()/run_alarm()
    "SIM108",  # ternary — sometimes if/else reads better
    "RUF001",  # we use × intentionally in the pomodoro UI
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- pytest ----------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = ["error"]
